Align the header and close-button correctly.
Add space between the header and the close-button
and align them vertically so that they look
similar to the desired outcome.

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -53,11 +53,13 @@ body {
 
 .header-container {
   display: flex; 
+  align-items: baseline;
 }
 
 .header {
   font-weight: bold;
   font-size: 18px;
+  margin-right: auto;
 }
 
 button {
